Name:                Push
Version:             0.0.1
Synopsis:            a simple system for building static websites itegrated with git
Homepage:            http://push.james-sanders.com
License:             BSD3
License-file:        LICENSE
Author:              James Sanders
Maintainer:          jimmyjazz14@gmail.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

data-files: 
  extra/templates/basic/index.html
  extra/site.conf.tmpl


Executable push
  hs-source-dirs: src
  Main-is: Main.hs
  Build-depends: base >= 4,
                 bytestring >= 0.9.1.5,
                 twine >= 0.0.1,
                 pandoc >= 1.8.0.1,
                 tagsoup >= 0.12,
                 unix >= 2.4.0.0,
                 old-locale >= 1.0.0.2,
                 filemanip == 0.3.5.1,
                 filepath >= 1.1.0.3,
                 directory >= 1.0.1.0,
                 process >= 1.0.1.2,
                 time >= 1.1.4,
                 data-object-yaml >= 0.3.3.4,
                 data-object >= 0.3.1.6,
                 failure >= 0.1.0.1,
                 containers >= 0.3.0.0,
                 template-haskell
  other-modules:
    Paths_Push
    